Adding react gem and files, renaming welcome controller to home controller

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,12 +24,12 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          = link_to "App Name", welcome_index_path, class: "navbar-brand"
+          = link_to "App Name", home_index_path, class: "navbar-brand"
         #navbar.collapse.navbar-collapse
           %ul.nav.navbar-nav
             / .active
             %li
-              %a{href: welcome_index_path} Home
+              %a{href: home_index_path} Home
             %li
               %a{href: users_path} Users
             / %li
