--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,36 +16,4 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
-    %nav.navbar.navbar-inverse.navbar-fixed-top{role: "navigation"}
-      .container
-        .navbar-header
-          %button.navbar-toggle.collapsed{type: "button", data: {toggle: "collapse", target: "#navbar"}, aria: {expanded: "false", controls: "navbar"} }
-            %span.sr-only Toggle navigation
-            %span.icon-bar
-            %span.icon-bar
-            %span.icon-bar
-          = link_to "App Name", home_index_path, class: "navbar-brand"
-        #navbar.collapse.navbar-collapse
-          %ul.nav.navbar-nav
-            / .active
-            %li
-              %a{href: home_index_path} Home
-            %li
-              %a{href: users_path} Users
-            / %li
-            /   %a{href: runs_path} Runs
-          %ul.nav.navbar-nav.navbar-right
-            - if current_user
-              %li
-                %a{href: user_path(current_user)}
-                  %img{ src: current_user.image, width: '20px'}
-                  = current_user.name
-            = render 'devise/shared/login_links'
-    .container
-      - flash.each do |name, msg|
-        = content_tag :div, class: "alert alert-#{name == :error ? "danger" : "success" } alert-dismissable", role: "alert" do
-          %button.close{type: "button", data: {dismiss: "alert"} }
-            %span{aria: {hidden: "true"} } &times;
-            %span.sr-only Close
-          = msg
-      = yield
+    = react_component('Main', @props)
