Implementing List Users in React

--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,5 +1,8 @@
-.page-header  
-  %h1 Listing users
+.page-header
+  %a{ href: '/users/new', className: 'btn btn-primary' }
+    %span.glyphicon.glyphicon-plus
+    New User
+  %h1 Listing Users
 
 .table-responsive
   %table.table.table-striped.table-bordered.table-hover
